...
    let button = UIButton()
    button.translatesAutoresizingMaskIntoConstraints = false
    let buttonImage = UIImage(systemName: "ipad.and.arrow.forward")
    button.setImage(buttonImage, for: .normal)
    button.addTarget(self, action: #selector(didTapLogoutButton), for: .touchUpInside)
    button.tintColor = .ypRed
    button.accessibilityIdentifier = "logout button"
    return button
  }()
  
  private lazy var stackView: UIStackView = {
    let stackView = UIStackView()
    stackView.translatesAutoresizingMaskIntoConstraints = false
...
//    })
  }
  
  //  MARK: - Public Methods
  @objc func didTapLogoutButton() {
    showAlert(
      title: "Выход",
      message: "Вы уверены что хотите выйти?") { [unowned self] in
        self.logOut()
      }
  }
  
    func updateAvatar(url: URL) {
...
